# education

./: .gitignore
Kafka/section-6/kafka-core/: pom.xml
Kafka/section-6/kafka-email-server/: pom.xml
Kafka/section-6/kafka-lesson/: pom.xml
angular/Section 10/10-starting-project/: README.md  angular.json  package-lock.json  package.json
angular/Section 11/rxjs-starting-project/: README.md  angular.json  package-lock.json  package.json
angular/Section 12/http-starting-project/: README.md  angular.json  package-lock.json  package.json
angular/Section 13/forms-starting-project/: README.md  angular.json  package-lock.json  package.json
angular/Section 14/routing-starting-project/: package-lock.json
angular/Section 2/00-core/: README.md  angular.json  package-lock.json  package.json
angular/Section 3/01-starting-project/: package-lock.json
angular/Section 4/01-starting-project-service/: package-lock.json  package.json
angular/Section 4/01-starting-project-signals/: angular.json
angular/Section 4/01-starting-project-signals-service/: README.md
angular/Section 6/01-starting-project/: package-lock.json
angular/Section 6/lifecycle-deep-dive-start/: package-lock.json
angular/Section 6/project-two/: README.md  angular.json  package-lock.json  package.json
angular/Section 7/directives-starting-project/: package-lock.json
angular/Section 9/services-starting-project/: README.md  angular.json  package-lock.json  package.json
go/lectures/: go.mod  go.sum
rust/experements/next-gen-ai/: Cargo.toml
rust/experements/next-gen-ai/src/: main.rs
(+319 files in other folders)
