[package]
name = "next-gen-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
kalosm = { git = "https://github.com/floneum/floneum", version = "0.3.2", features = ["full", "cuda"] }
#kalosm = { git = "https://github.com/floneum/floneum", version = "0.3.2", features = ["language", "cuda"] }
tokio = { version = "1.41.0", features = ["full"] }
